--- a/kubernetes/apps/observability/kube-prometheus-stack/app/prometheusrule.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/prometheusrule.yaml
@@ -3,22 +3,24 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: kube-prometheus-stack-rules
+  name: kube-prometheus-stack
 spec:
   groups:
     - name: kube-prometheus-stack.rules
       rules:
         - alert: DockerhubRateLimitRisk
+          expr: |
+            count(time() - container_last_seen{image=~"(docker.io).*",container!=""} < 30) > 100
           annotations:
             summary: Kubernetes cluster Dockerhub rate limit risk
-          expr: count(time() - container_last_seen{image=~"(docker.io).*",container!=""} < 30) > 100
           labels:
             severity: critical
 
         - alert: OomKilled
+          expr: |
+            (kube_pod_container_status_restarts_total - kube_pod_container_status_restarts_total offset 10m >= 1) and ignoring (reason) min_over_time(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[10m]) == 1
           annotations:
-            summary: Container {{ $labels.container }} in pod {{ $labels.namespace }}/{{ $labels.pod }} has been OOMKilled {{ $value }} times in the last 10 minutes.
-          expr: (kube_pod_container_status_restarts_total - kube_pod_container_status_restarts_total offset 10m >= 1) and ignoring (reason) min_over_time(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[10m]) == 1
+            summary: Container {{ $labels.container }} in pod {{ $labels.namespace }}/{{ $labels.pod }} has been OOMKilled {{ $value }} times in the last 10 minutes
           labels:
             severity: critical
 ---
@@ -26,7 +28,7 @@ spec:
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: smartctl-exporter-rules
+  name: smartctl-exporter
 spec:
   groups:
     - name: smartctl-exporter.rules
@@ -84,9 +86,9 @@ spec:
         - alert: SmartDeviceInterfaceSlow
           expr: |
             smartctl_device_interface_speed{speed_type="current"} != on(device, instance, namespace, pod) smartctl_device_interface_speed{speed_type="max"}
+          for: 5m
           annotations:
             summary: >-
               Device {{ $labels.device }} on instance {{ $labels.instance }} interface is slower then it should be
-          for: 5m
           labels:
             severity: critical
