--- a/kubernetes/apps/storage/volsync/app/prometheusrule.yaml
+++ b/kubernetes/apps/storage/volsync/app/prometheusrule.yaml
@@ -1,9 +1,8 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/prometheusrule_v1.json
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: volsync-rules
+  name: volsync
 spec:
   groups:
     - name: volsync.rules
@@ -11,19 +10,19 @@ spec:
         - alert: VolSyncComponentAbsent
           expr: |
             absent(up{job="volsync-metrics"})
+          for: 5m
           annotations:
             summary: >-
               VolSync component has disappeared from Prometheus target discovery
-          for: 5m
           labels:
             severity: critical
 
         - alert: VolSyncVolumeOutOfSync
           expr: |
-            volsync_volume_out_of_sync == 1
+            volsync_volume_out_of_sync{role="source"} == 1
+          for: 5m
           annotations:
             summary: >-
               {{ $labels.obj_namespace }}/{{ $labels.obj_name }} volume is out of sync
-          for: 5m
           labels:
             severity: critical
