--- a/kubernetes/apps/system/node-problem-detector/app/helmrelease.yaml
+++ b/kubernetes/apps/system/node-problem-detector/app/helmrelease.yaml
@@ -1,14 +1,17 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: deliveryhero
-  namespace: system # Required for Renovate lookups.
+  name: node-problem-detector
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://charts.deliveryhero.io
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 2.3.14
+  url: oci://ghcr.io/deliveryhero/helm-charts/node-problem-detector
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +20,9 @@ metadata:
   name: node-problem-detector
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: node-problem-detector
-      version: 2.3.14
-      sourceRef:
-        kind: HelmRepository
-        name: deliveryhero
-        namespace: system
+  chartRef:
+    kind: OCIRepository
+    name: node-problem-detector
   install:
     remediation:
       retries: 3
