--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: nextcloud
-  namespace: self-hosted # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://nextcloud.github.io/helm/
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 6.6.7
+  url: oci://ghcr.io/home-operations/charts-mirror/nextcloud
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://crd.movishell.pl/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: &app nextcloud
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: nextcloud
-      version: 6.6.7
-      sourceRef:
-        kind: HelmRepository
-        name: nextcloud
-        namespace: self-hosted
+  chartRef:
+    kind: OCIRepository
+    name: nextcloud
   install:
     remediation:
       retries: 3
