chore(nextcloud): test with nfs storage

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
     externalDatabase:
       enabled: true
       type: postgresql
-      database: nextcloud
+      database: nextcloud-test
       existingSecret:
         enabled: true
         secretName: *app
