--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -9,35 +9,35 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  components:
-    - ../../../../components/volsync
+  # components:
+  #   - ../../../../components/volsync
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
-    - name: democratic-csi-iscsi
-      namespace: storage
+    # - name: democratic-csi-iscsi
+    #   namespace: storage
     - name: dragonfly-cluster
       namespace: database
     - name: onepassword
       namespace: security
-    - name: volsync
-      namespace: storage
+    # - name: volsync
+    #   namespace: storage
   interval: 1h
   path: ./kubernetes/apps/self-hosted/nextcloud/app
-  postBuild:
-    substitute:
-      APP: *app
-      APP_UID: &uid "82"
-      APP_GID: *uid
-      VOLSYNC_CLAIM: *app
-      VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
-      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
-      VOLSYNC_SNAPSHOTCLASS: *storageClass
-      VOLSYNC_CACHE_ACCESSMODES: *accessModes
-      VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
-      VOLSYNC_CAPACITY: &capacity 10Gi
-      VOLSYNC_CACHE_CAPACITY: *capacity
-      VOLSYNC_TIME: "45 3 * * *"
+  # postBuild:
+  #   substitute:
+  #     APP: *app
+  #     APP_UID: &uid "82"
+  #     APP_GID: *uid
+  #     VOLSYNC_CLAIM: *app
+  #     VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
+  #     VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
+  #     VOLSYNC_SNAPSHOTCLASS: *storageClass
+  #     VOLSYNC_CACHE_ACCESSMODES: *accessModes
+  #     VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
+  #     VOLSYNC_CAPACITY: &capacity 10Gi
+  #     VOLSYNC_CACHE_CAPACITY: *capacity
+  #     VOLSYNC_TIME: "45 3 * * *"
   prune: true
   retryInterval: 2m
   sourceRef:
