chore(nextcloud): modify securityContext

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -203,10 +203,8 @@ spec:
           pm.process_idle_timeout = 10s
       securityContext:
         runAsNonRoot: true
-        # runAsUser: 82
-        runAsUser: 5000
-        # runAsGroup: 82
-        runAsGroup: 5000
+        runAsUser: 82
+        runAsGroup: 82
         readOnlyRootFilesystem: false
     collabora:
       enabled: true
@@ -272,9 +270,8 @@ spec:
               - *host
     cronjob:
       enabled: true
-      # securityContext:
-      #   # runAsGroup: 82
-      #   runAsGroup: 5000
+      securityContext:
+        runAsGroup: 82
     imaginary:
       enabled: true
     ingress:
@@ -322,9 +319,8 @@ spec:
       config:
         headers:
           "Strict-Transport-Security": "max-age=15552000; includeSubDomains;"
-      # securityContext:
-      #   # runAsGroup: 82
-      #   runAsGroup: 5000
+      securityContext:
+        runAsGroup: 82
       resources:
         requests:
           cpu: 50m
