--- a/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nextcloud
+  name: &name nextcloud-data
 spec:
-  storageClassName: nextcloud-nfs
+  storageClassName: *name
   capacity:
     storage: 1Mi
   accessModes: ["ReadWriteMany"]
@@ -22,10 +22,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud
+  name: &name nextcloud-data
   namespace: self-hosted
 spec:
-  storageClassName: nextcloud-nfs
+  storageClassName: *name
   accessModes: ["ReadWriteMany"]
   resources:
     requests:
