--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
+  - ./csi-driver-nfs/ks.yaml
   - ./democratic-csi/ks.yaml
   - ./minio/ks.yaml
   - ./openebs/ks.yaml
