--- a/kubernetes/apps/storage/csi-driver-nfs/app/storageclass.yaml
+++ b/kubernetes/apps/storage/csi-driver-nfs/app/storageclass.yaml
@@ -2,7 +2,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: trunas-ssd-nfs-nc
+  name: truenas-ssd-nfs-nc
 provisioner: nfs.csi.k8s.io
 parameters:
   server: ${SECRET_NAS_IP}
