--- a/kubernetes/apps/storage/csi-driver-nfs/app/storageclass.yaml
+++ b/kubernetes/apps/storage/csi-driver-nfs/app/storageclass.yaml
@@ -2,11 +2,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: truenas-ssd-nfs-nc
+  name: truenas-ssd-nfs-talos
 provisioner: nfs.csi.k8s.io
 parameters:
   server: ${SECRET_NAS_IP}
-  share: /mnt/ssd-data/Nextcloud
+  share: /mnt/ssd-data/Talos
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 # Note: The first two options are strictly for NFSv4.2
