--- a/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
@@ -1,12 +1,29 @@
 ---
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: nextcloud-pv
+spec:
+  capacity:
+    storage: 1Mi
+  accessModes: ["ReadWriteMany"]
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nextcloud-nfs
+  nfs:
+    server: ${SECRET_NAS_IP}
+    path: /mnt/ssd-data/Nextcloud
+  # Note: The first two options are strictly for NFSv4.2
+  mountOptions: ["nfsvers=4.2", "nconnect=16", "hard", "noatime"]
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud
+  name: nextcloud-pvc
   namespace: self-hosted
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
     requests:
-      storage: 10Gi
-  storageClassName: truenas-ssd-nfs-nc
+      storage: 1Mi
+  storageClassName: nextcloud-nfs
+  volumeName: nextcloud-pv
