--- a/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/pvc.yaml
@@ -2,13 +2,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nextcloud-pv
+  name: nextcloud
 spec:
   capacity:
     storage: 1Mi
   accessModes: ["ReadWriteMany"]
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: nextcloud-nfs
   nfs:
     server: ${SECRET_NAS_IP}
     path: /mnt/ssd-data/Nextcloud
@@ -18,12 +17,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud-pvc
+  name: nextcloud
   namespace: self-hosted
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
     requests:
       storage: 1Mi
-  storageClassName: nextcloud-nfs
-  volumeName: nextcloud-pv
