--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         NEXTCLOUD_ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
         NEXTCLOUD_METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
         POSTGRES_HOST: &dbHost postgres17-rw.database.svc.cluster.local
-        POSTGRES_DB: &dbName nextcloud-test
+        POSTGRES_DB: &dbName nextcloud
         POSTGRES_USER: &dbUser "{{ .NEXTCLOUD_POSTGRES_USER }}"
         POSTGRES_PASSWORD: &dbPass "{{ .NEXTCLOUD_POSTGRES_PASSWORD }}"
         SMTP_USERNAME: "{{ .NEXTCLOUD_SMTP_USERNAME }}"
