--- a/kubernetes/apps/system/nvidia-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/system/nvidia-device-plugin/app/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: nvidia-device-plugin
-  namespace: system # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://nvidia.github.io/k8s-device-plugin
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.17.1
+  url: oci://ghcr.io/home-operations/charts-mirror/nvidia-device-plugin
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: nvidia-device-plugin
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: nvidia-device-plugin
-      version: 0.17.1
-      sourceRef:
-        kind: HelmRepository
-        name: nvidia-device-plugin
-        namespace: system
+  chartRef:
+    kind: OCIRepository
+    name: nvidia-device-plugin
   install:
     crds: CreateReplace
     remediation:
