--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -7,8 +7,8 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  - ./exporters
-  - ./gatus/ks.yaml
+  # - ./exporters
+  # - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
