chore: temp disable deployments

--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -8,6 +8,6 @@ components:
 resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
-  - ./dragonfly/ks.yaml
-  - ./pgadmin/ks.yaml
-  - ./postgres-backup/ks.yaml
+  # - ./dragonfly/ks.yaml
+  # - ./pgadmin/ks.yaml
+  # - ./postgres-backup/ks.yaml
