--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -8,8 +8,8 @@ components:
 resources:
   # Flux-Kustomizations
   # - ./csi-driver-nfs/ks.yaml
-  - ./democratic-csi/ks.yaml
+  # - ./democratic-csi/ks.yaml
   - ./minio/ks.yaml
   - ./openebs/ks.yaml
   - ./snapshot-controller/ks.yaml
-  - ./volsync/ks.yaml
+  # - ./volsync/ks.yaml
