fix(dcsi): enable detached vols and snaps

--- a/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
@@ -32,7 +32,7 @@ spec:
           iscsi:
             targetPortal: "${SECRET_NAS_IP}:3260"
             nameTemplate: "{{`{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}`}}-{{`{{ parameters.[csi.storage.k8s.io/pvc/name] }}`}}"
-            namePrefix: csi-
+            namePrefix: ""
             nameSuffix: ""
             targetGroups:
               - targetGroupPortalGroup: 2
