--- a/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: democratic-csi-nfs
+  name: democratic-csi-ssd-nfs
 spec:
   interval: 1h
   chartRef:
@@ -40,7 +40,7 @@ spec:
     csiProxy:
       image: ghcr.io/democratic-csi/csi-grpc-proxy:v0.5.6
     csiDriver:
-      name: "org.democratic-csi.nfs"
+      name: "org.democratic-csi.ssd-nfs"
     storageClasses:
       - name: truenas-ssd-nfs
         defaultClass: false
@@ -49,8 +49,8 @@ spec:
         allowVolumeExpansion: true
         parameters:
           fsType: nfs
-          detachedVolumesFromSnapshots: false
-          detachedVolumesFromVolumes: false
+          detachedVolumesFromSnapshots: true
+          detachedVolumesFromVolumes: true
         mountOptions:
           ["nfsvers=4.2", "nconnect=8", "hard", "noatime", "nodiratime"]
         secrets:
@@ -61,7 +61,7 @@ spec:
           controller-expand-secret:
     volumeSnapshotClasses:
       - name: truenas-ssd-nfs
-        driver: org.democratic-csi.nfs
+        driver: org.democratic-csi.ssd-nfs
         deletionPolicy: Delete
         parameters:
           detachedSnapshots: false
