--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -8,7 +8,7 @@ components:
 resources:
   # Flux-Kustomizations
   # - ./csi-driver-nfs/ks.yaml
-  # - ./democratic-csi/ks.yaml
+  - ./democratic-csi/ks.yaml
   - ./minio/ks.yaml
   - ./openebs/ks.yaml
   - ./snapshot-controller/ks.yaml
