chore(volsync): new volsync components structure

--- a/kubernetes/components/volsync/minio/externalsecret.yaml
+++ b/kubernetes/components/volsync/minio/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name "${APP}-volsync"
+  name: &name "${APP}-volsync-minio"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
