--- a/kubernetes/components/volsync/pvc.yaml
+++ b/kubernetes/components/volsync/pvc.yaml
@@ -5,11 +5,11 @@ metadata:
   name: "${VOLSYNC_CLAIM:-${APP}}"
 spec:
   accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
-  storageClassName: "${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}"
   dataSourceRef:
-    name: "${APP}-rdst"
     kind: ReplicationDestination
     apiGroup: volsync.backube
+    name: "${APP}-dst"
   resources:
     requests:
       storage: "${VOLSYNC_CAPACITY:-1Gi}"
+  storageClassName: "${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}"
