--- a/kubernetes/components/volsync/minio/replicationdestination.yaml
+++ b/kubernetes/components/volsync/minio/replicationdestination.yaml
@@ -3,24 +3,24 @@
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationDestination # Cluster resource used for restores.
 metadata:
-  name: "${APP}-rdst"
+  name: "${APP}-dst"
 spec:
   trigger:
     manual: restore-once
   restic:
-    repository: "${APP}-volsync"
-    copyMethod: Snapshot
     accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
-    storageClassName: "${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}"
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-truenas-ssd-iscsi}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
+    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-truenas-ssd-iscsi}"
     capacity: "${VOLSYNC_CAPACITY:-1Gi}"
-    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
+    cleanupCachePVC: true
+    cleanupTempPVC: true
+    enableFileDeletion: true
+    copyMethod: Snapshot
     moverSecurityContext:
       runAsUser: "${APP_UID:-5000}"
       runAsGroup: "${APP_GID:-5000}"
       fsGroup: "${APP_GID:-5000}"
-    enableFileDeletion: true
-    cleanupCachePVC: true
-    cleanupTempPVC: true
+    repository: "${APP}-volsync-minio"
+    storageClassName: "${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}"
+    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-truenas-ssd-iscsi}"
