--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   # - ./exporters
   # - ./gatus/ks.yaml
   # - ./grafana/ks.yaml
-  # - ./kube-prometheus-stack/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./promtail/ks.yaml
