--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -8,11 +8,11 @@ components:
 resources:
   # Flux-Kustomizations
   # - ./exporters
-  # - ./gatus/ks.yaml
-  # - ./grafana/ks.yaml
+  - ./gatus/ks.yaml
+  - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  # - ./loki/ks.yaml
+  - ./loki/ks.yaml
   # - ./promtail/ks.yaml
   # - ./silence-operator/ks.yaml
   # - ./unpoller/ks.yaml
