--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -13,6 +13,6 @@ resources:
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
-  # - ./promtail/ks.yaml
-  # - ./silence-operator/ks.yaml
-  # - ./unpoller/ks.yaml
+  - ./promtail/ks.yaml
+  - ./silence-operator/ks.yaml
+  - ./unpoller/ks.yaml
