--- a/kubernetes/components/volsync/minio/replicationsource.yaml
+++ b/kubernetes/components/volsync/minio/replicationsource.yaml
@@ -12,7 +12,7 @@ spec:
     accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-truenas-ssd-iscsi}"
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
     copyMethod: Snapshot
     moverSecurityContext:
       runAsUser: "${APP_UID:-5000}"
