chore(jellyfin): enable deployment

--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -119,7 +119,8 @@ spec:
               - *host
     persistence:
       config:
-        existingClaim: ${VOLSYNC_CLAIM}
+        # existingClaim: ${VOLSYNC_CLAIM}
+        existingClaim: *app
       media:
         type: nfs
         server: ${SECRET_NAS_IP}
