--- a/kubernetes/apps/media/lidarr/ks.yaml
+++ b/kubernetes/apps/media/lidarr/ks.yaml
@@ -32,7 +32,7 @@ spec:
       VOLSYNC_STORAGECLASS: &storageClass truenas-ssd-nfs-test
       VOLSYNC_SNAPSHOTCLASS: *storageClass
       VOLSYNC_CACHE_ACCESSMODES: *accessModes
-      VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
+      VOLSYNC_CACHE_SNAPSHOTCLASS: openebs-hostpath
       VOLSYNC_CAPACITY: &capacity 7Gi
       VOLSYNC_CACHE_CAPACITY: *capacity
   prune: true
