--- a/kubernetes/apps/media/radarr/ks.yaml
+++ b/kubernetes/apps/media/radarr/ks.yaml
@@ -29,10 +29,10 @@ spec:
       APP_GID: *uid
       VOLSYNC_CLAIM: *app
       VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
-      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_NFS}
+      VOLSYNC_STORAGECLASS: &storageClass truenas-ssd-nfs-test
       VOLSYNC_SNAPSHOTCLASS: *storageClass
       VOLSYNC_CACHE_ACCESSMODES: *accessModes
-      VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
+      VOLSYNC_CACHE_SNAPSHOTCLASS: openebs-hostpath
       VOLSYNC_CAPACITY: &capacity 2Gi
       VOLSYNC_CACHE_CAPACITY: *capacity
   prune: true
