chore: disable deployments prior to cluster re-deployment

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,17 +5,17 @@ kind: Kustomization
 namespace: media
 components:
   - ../../components/common
-resources:
+resources: []
   # Flux-Kustomizations
   # - ./audiobookshelf/ks.yaml
-  - ./bazarr/ks.yaml
-  - ./jellyfin/ks.yaml
+  # - ./bazarr/ks.yaml
+  # - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
   # - ./jellystat/ks.yaml
-  - ./lidarr/ks.yaml
+  # - ./lidarr/ks.yaml
   # - ./navidrome/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
   # - ./recyclarr/ks.yaml
-  - ./sonarr/ks.yaml
+  # - ./sonarr/ks.yaml
   # - ./unpackerr/ks.yaml
