feat(dcgm-exporter): move to OCIRepository

--- a/kubernetes/apps/observability/exporters/dcgm-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/dcgm-exporter/app/helmrelease.yaml
@@ -1,14 +1,22 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: dcgm-exporter
-  namespace: observability # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://nvidia.github.io/dcgm-exporter/helm-charts
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 4.0.4
+  url: oci://ghcr.io/home-operations/charts-mirror/dcgm-exporter
+  verify:
+    provider: cosign
+    matchOIDCIdentity:
+      - issuer: "^https://token.actions.githubusercontent.com$"
+        subject: "^https://github.com/home-operations/charts-mirror.*$"
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +25,9 @@ metadata:
   name: dcgm-exporter
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: dcgm-exporter
-      version: 4.0.4
-      sourceRef:
-        kind: HelmRepository
-        name: dcgm-exporter
-        namespace: observability
+  chartRef:
+    kind: OCIRepository
+    name: dcgm-exporter
   install:
     remediation:
       retries: 3
