--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -7,7 +7,7 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  # - ./dokuwiki/ks.yaml
+  - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
