--- a/kubernetes/apps/network/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/app/helmrelease.yaml
@@ -35,6 +35,9 @@ spec:
       retries: 3
   values:
     fullnameOverride: *app
+    image: # TODO: Remove this block when new chart version is released.
+      repository: registry.k8s.io/external-dns/external-dns
+      tag: v0.16.1
     provider: cloudflare
     env:
       - name: &name CF_API_TOKEN
