--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./exporters
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
+  - ./headlamp/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./loki/ks.yaml
