--- a/kubernetes/apps/observability/headlamp/ks.yaml
+++ b/kubernetes/apps/observability/headlamp/ks.yaml
@@ -11,6 +11,12 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/observability/headlamp/app
+  postBuild:
+    substitute:
+      APP: *app
+      PVC_ACCESSMODES: ReadWriteOnce
+      PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
+      PVC_CAPACITY: 1Gi
   prune: true
   retryInterval: 2m
   sourceRef:
