--- a/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
       reloader.stakater.com/auto: "true"
     persistentVolumeClaim:
       enabled: true
-      accessModes: ${PVC_ACCESSMODES}
+      accessModes: ["${PVC_ACCESSMODES}"]
       size: ${PVC_CAPACITY}
       storageClassName: ${PVC_STORAGECLASS}
     resources:
