--- a/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
@@ -70,6 +70,9 @@ spec:
         memory: 128Mi
       limits:
         memory: 256Mi
+    serviceAccount:
+      create: false
+      name: headlamp-admin
     volumeMounts:
       - mountPath: /build/plugins
         name: headlamp-plugins
