chore(ci): use not canceled in status checks

--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -117,7 +117,7 @@ jobs:
         run: talosctl --nodes $NODE image pull ${{ matrix.images }}
 
   status:
-    if: ${{ always() }}
+    if: ${{ !cancelled() }}
     name: Image Pull - Success
     needs: pull
     runs-on: ubuntu-latest
