--- a/kubernetes/apps/network/external-dns/app/prometheusrule.yaml
+++ b/kubernetes/apps/network/external-dns/app/prometheusrule.yaml
@@ -3,47 +3,47 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: external-dns-rules
+  name: external-dns
 spec:
   groups:
     - name: external-dns.rules
       rules:
         - alert: ExternalDNSRegistryError
-          expr: |
-            external_dns_registry_errors_total > 0
-          for: 5m
           annotations:
             summary: >-
               {{ $labels.job }} has registry errors for more than 5 minutes
+          expr: |
+            external_dns_registry_errors_total > 0
+          for: 5m
           labels:
             severity: critical
 
         - alert: ExternalDNSSourceError
-          expr: |
-            external_dns_source_errors_total > 0
-          for: 5m
           annotations:
             summary: >-
               {{ $labels.job }} has source errors for more than 5 minutes
+          expr: |
+            external_dns_source_errors_total > 0
+          for: 5m
           labels:
             severity: critical
 
         - alert: ExternalDNSApplyChangesError
-          expr: |
-            external_dns_webhook_provider_applychanges_errors_total > 0
-          for: 5m
           annotations:
             summary: >-
               {{ $labels.job }} has failed to apply changes for more than 5 minutes
+          expr: |
+            external_dns_webhook_provider_applychanges_errors_total > 0
+          for: 5m
           labels:
             severity: critical
 
         - alert: ExternalDNSRecordsError
-          expr: |
-            external_dns_webhook_provider_records_errors_total > 0
-          for: 5m
           annotations:
             summary: >-
               {{ $labels.job }} has failed to gather records for more than 5 minutes
+          expr: |
+            external_dns_webhook_provider_records_errors_total > 0
+          for: 5m
           labels:
             severity: critical
